--- a/src/controls/RequestsList/RequestList.module.scss
+++ b/src/controls/RequestsList/RequestList.module.scss
@@ -1,99 +1,29 @@
 @import '~@microsoft/sp-office-ui-fabric-core/dist/sass/SPFabricCore.scss';
 
-
-.Documentcard {
-  width: '100%';
-  height: '100%'
-}
-.calendarFooterControls{
-  text-align: center;
-}
-.previewEventIcon {
-
-  justify-content: 'center';
-  display: 'flex';
-  align-items: 'center';
-  font-size: 32px;
-}
-
-.locationIcon {
-
-  justify-content: 'center';
-  display: 'flex';
-  align-items: 'top';
-  font-size: 22px;
-  margin-top: 10px;
-}
-
-
-.location {
-
-  justify-content: 'center';
-  display: 'flex';
-  align-items: 'top';
-
-}
-
-.DocumentCardDetails{
-
-  background-color: #f2f2f2;
-  border-style: 'solid';
-  border-width: 1.3px;
-  border-color: #e6e6e6;
-  height:auto;
-  justify-content: 'center';
-  display: 'flex';
-  align-items: 'top';
-
-}
-.ApprovalStatus{  
-  font-weight:  $ms-font-weight-semibold;
-  justify-content: 'center';
-  text-align: 'center';
-  border-bottom: #bababa 1px;
-}
-.eventStyle{
-  background-color: white;
-      border-radius: '0px';
-      opacity: 1;
-      color: black;
-      border-width: 1.4px;
-      border-style: 'solid';
-      display: 'block'
-}
-
-.DocumentCardTitle {
-  font-weight:  $ms-font-weight-semibold;
-   height: '100%';
-   text-overflow: ellipsis;
-   display: 'flex';
-   justify-content: 'center';
-   text-align: 'center';
-}
-
-.DocumentCardTitleTime{
+.description {
+  border: 1px solid #a6a6a6;
+  padding: 10;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
   padding-top: 10px;
-  justify-content: 'center';
-  display: 'flex';
-  align-items: 'top';
-  margin-bottom: 6px;
-  font-size: $ms-font-size-m;
-    font-weight: $ms-font-weight-semibold;
-    font-family: "Segoe UI WestEuropean","Segoe UI",-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
+  height: 300px;
+  max-height: 320px;
+  overflow: auto;
 }
+
+.description:hover {
+  border-color: rgb( 51, 51, 51 );
+}
+
 .calendar {
   .container {
     max-width: 100%;
     min-height: 400px;
     height: 600px;
     margin: 0px auto;
-
   }
 
-  .plainCard {
-    width: 300;
-    height: 286;
-  }
   .eventTitle {
     white-space: nowrap;
     overflow: hidden;
@@ -105,7 +35,7 @@
     @include ms-fontColor-white;
     background-color: $ms-color-themeDark;
     padding: 20px;
-    border-style: solid
+    border-style: solid;
   }
 
   .column {
@@ -130,7 +60,6 @@
     @include ms-font-l;
     @include ms-fontColor-white;
   }
-
 
   .button {
     // Our button
